--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="contourmap/leaflet-geoman2.css" />
     <!-- <link rel="stylesheet" href="contourmap/leaflet-velocity.css" /> -->
     <link rel="stylesheet" href="contourmap/leaflet-measure.css">
-    <link rel="stylesheet" href="contourmap/Leaflet.StyleEditor.min.css" />
+    <!-- <link rel="stylesheet" href="contourmap/Leaflet.StyleEditor.min.css" /> -->
     <link rel="stylesheet" href="contourmap/demo.css" />
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -29,7 +29,6 @@
     <!-- <script src="contourmap/leaflet-velocity.js"></script> -->
     <script src="contourmap/leaflet.latlng-graticule.js"></script>
     <script src="contourmap/leaflet-geoman.min2.js"></script>
-    <!-- <script src="contourmap/Leaflet.StyleEditor.min.js"></script> -->
     <script src="contourmap/leaflet-measure.js"></script>
     <!-- <script src="https://unpkg.com/leaflet-kmz@latest/dist/leaflet-kmz.js"></script> -->
     <script src="contourmap/L.KML.js"></script>
@@ -61,6 +60,9 @@
 
         .opt {
             background: rgb(150, 150, 150);
+            /* text-align: center; */
+            text-align:center;
+            /* display: inline; */
         }
 
         .my-div-icon {
@@ -113,7 +115,7 @@
         <p>边线色：<input type="color" id="edgecolor" value="#2D9900"> 填充色：<input type="color" id="fillcolor" value="#2124c7"></p>
         <div>
             <div style="float:left;">
-                <textarea id="textarea" cols="40" rows="20" style="resize: none;">A1 121.4581 30.6888&#10;A2 121.5875 30.6744&#10;A3 121.5883 30.6331</textarea>
+                <textarea id="textarea" cols="30" rows="20" style="resize: none;">A1 121.4581 30.6888&#10;A2 121.5875 30.6744&#10;A3 121.5883 30.6331</textarea>
             </div>
             <div style="float:right;"><button onclick="drawsite()" style="height: 30px;">点集合</button></div>
             <div><button onclick="drawpolygon()" style="height: 30px;">多边形</button></div>
@@ -121,10 +123,10 @@
         </div>
     </div>
     <div id="ShowDiv" name="ShowDiv"></div>
-    <div>
-        <select id="select" style="display: none;">
-        </select>
-    </div>
+
+    <!-- <select id="select"></select> -->
+    <select id="select" style="display: none;"></select>
+
     <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
