--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
 <!-- <body background="res/bank.jpg" style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"> -->
 <!-- <video autoplay loop muted><source src="res/A.mp4" type="video/mp4"/></video> -->
 <h1 style="text-align: center; background-color: rgb(53, 108, 211);">Website of JET</h1>
-<a href="Gaussian projection coordinate conversion.html">高斯投影正反算坐标转换</a>
-<a href="auto contours.html" style="top: 25%;">自动等值轴刻度颜色图例</a>
-<a href="webgis contour map.html" style="top: 40%;">等值线图在线渲染展示系统</a>
+<a href="Gaussian projection coordinate conversion.html" style="top: 5%;">高斯投影正反算坐标转换</a>
+<a href="transform.html" style="top: 20%;">大地坐标度分秒转换</a>
+<a href="auto contours.html" style="top: 35%;">自动等值轴刻度颜色图例</a>
+<a href="webgis contour map.html" style="top: 50%;">等值线图在线渲染展示系统</a>
 </body>
 </html>
