--- a/transform.html
+++ b/transform.html
@@ -15,25 +15,26 @@
     </p>
     <div align="center"><button onClick="main()" style="width: 21%; text-align: center;font-size: 20px;">开始转换</button>
     </div>
+    <br>
     <p>
         <span style="width: 25%; float: left; text-align: center;">输入</span>
-        <span style="width: 20%; float: left; text-align: center;">度(°)</span>
-        <span style="width: 20%; float: left; text-align: center;">度分(° ′)</span>
-        <span style="width: 25%; float: left; text-align: center;">度分秒(° ′ ″)</span>
+        <span style="width: 22%; float: left; text-align: center;">度(°)</span>
+        <span style="width: 22%; float: left; text-align: center;">度分(° ′)</span>
+        <span style="width: 22%; float: left; text-align: center;">度分秒(° ′ ″)</span>
     </p>
     <br>
     <p>
-        <input type="text"  id="input0" value="0" style="width: 25%; text-align: center; visibility: hidden;">
-        <input type="text"  id="input1" value="8" style="width: 19%; text-align: center;">
-        <input type="text"  id="input2" value="5" style="width: 20%; text-align: center;">
-        <input type="text"  id="input3" value="3" style="width: 24%; text-align: center;">
+        <input type="text"  id="input0" value="0" style="width: 25%; margin-right:4px; text-align: center; visibility: hidden;">
+        <input type="text"  id="input1" value="8" onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')" placeholder="输入(度: ° )保留小数位数" style="width: 22%; margin-right:2px; text-align: center;">
+        <input type="text"  id="input2" value="5" onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')" placeholder="输入(分: ′ )保留小数位数" style="width: 22%; margin-right:2px; text-align: center;">
+        <input type="text"  id="input3" value="3" onkeyup="value=value.replace(/^(0+)|[^\d]+/g,'')" placeholder="输入(秒: ″ )保留小数位数" style="width: 22%; margin-right:2px; text-align: center;">
     </p>
     <p>
         <textarea id="yuanshuju" rows="30"
-            style="width: 25%;float: left; resize: none;">40.94194 121.81278&#10;40.90889 121.81028&#10;40.87583	121.81056&#10;40.84028	121.80944</textarea>
-        <textarea id="xinshuju1" rows="30" style="width: 20%; float: left; resize: none;"></textarea>
-        <textarea id="xinshuju2" rows="30" style="width: 20%; float: left; resize: none;"></textarea>
-        <textarea id="xinshuju3" rows="30" style="width: 25%; float: left; resize: none;"></textarea>
+            style="width: 25%; float: left; margin-right:6px; resize: none;">40.94194 121.81278&#10;40.90889 121.81028&#10;40.87583	121.81056&#10;40.84028	121.80944</textarea>
+        <textarea id="xinshuju1" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
+        <textarea id="xinshuju2" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
+        <textarea id="xinshuju3" rows="30" style="width: 22%; float: left; margin-right:6px; resize: none;"></textarea>
     </p>
 </body>
 <script src="transform/dufenmiao.js"></script>
@@ -46,6 +47,10 @@
     var outArea3 = document.getElementById("xinshuju3");
     //---------------------------------------------------------------------------------------<主程序>
     function main() {
+        outArea1.value='';
+        outArea2.value='';
+        outArea3.value='';
+
         var xiaoshu_du=document.getElementById("input1").value;
         var xiaoshu_fen=document.getElementById("input2").value;
         var xiaoshu_miao=document.getElementById("input3").value;
@@ -115,6 +120,7 @@
         newtext3 = Doub_Arr_2_Str(shuju3); //调用<二维数组转为字符>
         outArea3.value = newtext3; //字符串写入输出框
 
+        // alert("转换完成");
     }
     //------------------------------------------------------------------------------------<二维数组转字符>
     function Doub_Arr_2_Str(arr) {
