Update webgis contour map.html

--- a/webgis contour map.html
+++ b/webgis contour map.html
@@ -13,7 +13,7 @@
         }
         else{
             machineStyle="shuping" 
-            var offWidth = window.screen.height / 100;
+            var offWidth = window.screen.height / 40;
             document.getElementsByTagName("html")[0].style.fontSize = offWidth + 'px';
             console.log(offWidth + 'px');
         }
@@ -30,8 +30,8 @@
 <head>
     <title>webgis</title>
     <meta charset="utf-8">
-    <!-- <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" /> -->
-    <link rel="stylesheet" href="contourmap/leaflet.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
+    <!-- <link rel="stylesheet" href="contourmap/leaflet.css" /> -->
     <link rel="stylesheet" href="contourmap/leaflet-geoman2.css" />
     <!-- <link rel="stylesheet" href="contourmap/leaflet-velocity.css" /> -->
     <link rel="stylesheet" href="contourmap/leaflet-measure.css">
