--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 <a href="transform.html" style="top: 20%;">大地坐标度分秒转换</a>
 <a href="auto contours.html" style="top: 35%;">自动等值轴刻度颜色图例</a>
 <a href="webgis contour map.html" style="top: 50%;">等值线图在线渲染展示系统</a>
+<a href="Openstreet Rigon.html" style="top: 65%;">Open Street 行政区域查询</a>
 </body>
 </html>
