--- a/auto contours.html
+++ b/auto contours.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="自动 轴刻度 颜色比例尺 auto level contour breaks colorlegend">
-    <title>Document</title>
+    <title>auto level</title>
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script> -->
     <script src="auto contours/abcl.js"></script>
     <style>
@@ -22,7 +22,7 @@
 
 <body>
     <h2>自动等差刻度等值线(auto level/contour/breaks)</h2>
-    <p><a href="index.html">返回主页</a></p>
+    <!-- <p><a href="index.html">返回主页</a></p> -->
     <div style="border-style:solid; border-width:1px; border-color:#000;padding: 10px;">
         输入:一个最小值(value
         MIN)、最大值(valueMAX)，以及你想要的分段数量(TargetNm)。输出:最合适的等差序列，为了使用方便美观，以1,2,3,5及他们与10的整数次幂(含负整数)的乘积为步长,依次判断并选出与计划分段数量(TargetNm)最为符合和接近的步长，据此形成等差序列。大多数情况下，最终生成的分段个数会在你想得到的个数上下波动，但一定是最适宜的。
