Update Gaussian projection coordinate conversion.html

--- a/Gaussian projection coordinate conversion.html
+++ b/Gaussian projection coordinate conversion.html
@@ -13,7 +13,7 @@
     <!-- <body background="res/bank.jpg"  opacity=0.5 style=" background-repeat:no-repeat; background-size:100% 100%; background-attachment: fixed;"></body> -->
     <p>
     <h1>高斯投影坐标转换正反算系统</h1>
-    <a href="index.html">返回主页</a>
+    <!-- <a href="index.html">返回主页</a> -->
     <a href="Gaussian projection coordinate conversion/manual.txt">使用必读</a>
     <a href="http://www.baidu.com" target="_blank">百度搜索</a>
     </p>
