--- a/transform.html
+++ b/transform.html
@@ -10,8 +10,8 @@
 <body style="background-color: rgb(231, 248, 237);">
     <p>
     <h1>度分秒转换工具</h1>
-    <a href="index.html">返回主页</a>
-    <a href="http://www.baidu.com" target="_blank">百度搜索</a>
+    <!-- <a href="index.html">返回主页</a> -->
+    <!-- <a href="http://www.baidu.com" target="_blank">百度搜索</a> -->
     </p>
     <div align="center"><button onClick="main()" style="width: 21%; text-align: center;font-size: 20px;">开始转换</button>
     </div>
